force-app/main/default/objects/Demo_Session__c/Demo_Session__c.object-meta.xml
<CustomObject>
    <label>Demo Session</label>
    <pluralLabel>Demo Sessions</pluralLabel>
    <description>One row per Skywave Interactive demo run. Holds the current presenter-side State for the whole audience and serves as the rollup parent for Contacts created during the run.</description>
    <nameField>
        <label>Demo Session Number</label>
        <type>AutoNumber</type>
        <displayFormat>DEMO-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>