force-app/main/default/objects/Demo_Session__c/fields/Active_Owner_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Owner_Key__c</fullName>
    <label>Active Owner Key</label>
    <description>Multi-tenancy guard. Set to the record OwnerId while Active__c=true, blank otherwise (kept in sync by Demo_Session_Trigger). Because this field is Unique, the platform structurally allows at most ONE active Demo_Session__c per owner — a second active row for the same presenter fails with DUPLICATE_VALUE at commit instead of silently relying on a date-sort tiebreaker. Unlimited blank (inactive) rows are allowed. System-managed; not for manual edit.</description>
    <type>Text</type>
    <length>18</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>