force-app/main/default/objects/Demo_Session__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <description>Name of the customer or audience the demo is being presented to (free text, since they may not be in the org as Accounts/Contacts).</description>
    <type>Text</type>
    <length>120</length>
</CustomField>