force-app/main/default/objects/Demo_Session__c/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <label>Demo Date</label>
    <description>The day the demo was (or will be) presented. Used in the monitor's session picker so the presenter can find the right run by date.</description>
    <type>Date</type>
</CustomField>