force-app/main/default/objects/Demo_Session__c/fields/Ended__c.field-meta.xml
<CustomField>
    <fullName>Ended__c</fullName>
    <label>Ended</label>
    <description>When the demo run ended (set when State transitions to done, or manually).</description>
    <type>DateTime</type>
</CustomField>