force-app/main/default/objects/Demo_Session__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Free-form notes about the run (venue, audience, observations).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>