force-app/main/default/objects/Demo_Session__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <label>Started</label>
    <description>When the demo run started.</description>
    <type>DateTime</type>
</CustomField>