force-app/main/default/objects/Demo_Session__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <description>Current stage of the demo. Changing this value publishes Demo_State_Change__e via trigger, which advances all connected phones via the Heroku WS relay and updates the monitor LWC.</description>
    <inlineHelpText>Pick the current stage of the demo. Phones receive the change in &lt;1s.</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>idle</fullName>
                <default>true</default>
                <label>Idle</label>
            </value>
            <value>
                <fullName>scan</fullName>
                <label>Scan</label>
            </value>
            <value>
                <fullName>survey</fullName>
                <label>Survey</label>
            </value>
            <value>
                <fullName>agent_book</fullName>
                <label>Agent: Book Flight</label>
            </value>
            <value>
                <fullName>profile</fullName>
                <label>Create Profile</label>
            </value>
            <value>
                <fullName>c360</fullName>
                <label>C360 Reveal</label>
            </value>
            <value>
                <fullName>agent_seat_fail</fullName>
                <label>Agent: Change Seat (Fail)</label>
            </value>
            <value>
                <fullName>agent_seat_pass</fullName>
                <label>Agent: Change Seat (Pass)</label>
            </value>
            <value>
                <fullName>race</fullName>
                <label>Trolley Race</label>
            </value>
            <value>
                <fullName>slack</fullName>
                <label>Slack Reveal</label>
            </value>
            <value>
                <fullName>done</fullName>
                <label>Done</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>